--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header>
         <img class="imagem_logo" src="modelo-de-design-de-ilustracao-vetorial-de-simbolo-de-icone-de-logotipo-de-agricultura_757387-2389.avif" alt="logo">
-        <h1 class="titulo_principal">t</h1>
+        <h1 class="titulo_principal">AGRONEGOCIO</h1>
 
     </header>
 
